care-australia-uat/force-app/main/default/objects/Second_gifts__c/Second_gifts__c.object-meta.xml
<CustomObject>
    <label>Second gift</label>
    <nameField>
        <label>Second gift</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Second gifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>