care-australia-uat/force-app/main/default/objects/Second_gifts__c/fields/BM_All__c.field-meta.xml
<CustomField>
    <fullName>BM_All__c</fullName>
    <description>The second gift rate for all organisations who participated in the benchmarking</description>
    <label>Benchmarking - All Sectors</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>