care-australia-uat/force-app/main/default/objects/Second_gifts__c/fields/BM_Int__c.field-meta.xml
<CustomField>
    <fullName>BM_Int__c</fullName>
    <description>Second gift rate for all of the international charities who participated in the benchmarking</description>
    <label>Benchmarking - International</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>