care-australia-uat/force-app/main/default/objects/Second_gifts__c/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <label>No Second Gift</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>