care-australia-uat/force-app/main/default/objects/Second_gifts__c/fields/Over__c.field-meta.xml
<CustomField>
    <fullName>Over__c</fullName>
    <label>Second Gift Received after 365 Days</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>