care-australia-uat/force-app/main/default/objects/Second_gifts__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type of Gift</label>
    <length>255</length>
    <type>Text</type>
</CustomField>