care-australia-uat/force-app/main/default/objects/Second_gifts__c/fields/Yes_Ext__c.field-meta.xml
<CustomField>
    <fullName>Yes_Ext__c</fullName>
    <description>CARE second gift rate as calculated by the benchmarking</description>
    <label>Gave Second Gift - from benchmarking</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>