care-australia-uat/force-app/main/default/objects/Second_gifts__c/fields/Yes_FY__c.field-meta.xml
<CustomField>
    <fullName>Yes_FY__c</fullName>
    <description>Second gift rate calculated on a financial year basis</description>
    <label>Gave Second Gift - financial year</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>