care-australia-uat/force-app/main/default/objects/Second_gifts__c/fields/Yes_Internal__c.field-meta.xml
<CustomField>
    <fullName>Yes_Internal__c</fullName>
    <description>Second gift rate calculated by the DPP using data from the CRM from Oct 2022</description>
    <label>Gave Second Gift - from DPP</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>