care-australia-uat/force-app/main/default/objects/Second_gifts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>No__c</columns>
    <columns>Over__c</columns>
    <columns>Yes_Internal__c</columns>
    <columns>Yes_Ext__c</columns>
    <columns>BM_Int__c</columns>
    <columns>BM_All__c</columns>
    <columns>Yes_FY__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>